change edit button on indexpage

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= item.weight %></td>
         <td><%= item.value %></td>
         <td><a href="<%= item_edit_path(item) %>" >
-                    <i>mode_edit</i>
+                    <i>Edit</i>
                 </a>
           </td>
       </tr>
