--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
 <% @boxes.each do |box| %>
-	<%= link_to box_url(box) do %>
+	<%= link_to boxes_url(box) do %>
 		<li><%= box.label %></li>
 	<% end %>
 <% end %>
