--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -1,9 +1,9 @@
 <h1>I'm a BOX!!</h1>
 
 <!-- <ul>
-<% @boxes.each do |box| %>
+<% @boxes.each #do |box| %>
 	<%# link_to boxes_url(box) do %>
 		<li><%# box.label %></li>
-	<% end %>
-<% end %>
+	<% #end %>
+<% #end %>
 </ul> -->
