--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,6 +19,9 @@
                     <i>Edit</i>
                 </a>
           </td>
+          <td><a class="btn-floating btn-large red" data-confirm="Are you sure you want to delete <%= item.name %>?" data-method="delete" href="/items/<%= item.id %>" rel="nofollow"><i class="large material-icons">Delete</i>
+           </a>
+        </td>
       </tr>
   <% end %>
 </table>
