--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -1,5 +1,6 @@
 <h1>I'm a BOX!!</h1>
-
+This should show your box after you have edited it. 
+It should show the dimensions, whether it arrived, and if it is sealed.
 <!-- <ul>
 <% @boxes.each #do |box| %>
 	<%# link_to boxes_url(box) do %>
@@ -7,3 +8,5 @@
 	<% #end %>
 <% #end %>
 </ul> -->
+
+somehow put a link here to route back to the home page
