--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -2,5 +2,7 @@
 <h5><%= @boxes.length %></h5>
 <h5><%= @boxes.width %></h5>
 <h5><%= @boxes.height %></h5>
+<h5><%= @boxes.sealed %></h5>
+<h5><%= @boxes.arrived %></h5>
 
 <%= button_to 'edit', box_edit_path, method: :get %>
