--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -4,5 +4,10 @@
 <h5><%= @boxes.height %></h5>
 <h5><%= @boxes.sealed %></h5>
 <h5><%= @boxes.arrived %></h5>
+<h5><%= @items.weight %></h5>
+<h5><%= @items.value %></h5>
 
 <%= button_to 'edit', box_edit_path, method: :get %>
+
+
+<!-- lines 7 and 8 should show the total weight and value -->
