--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,6 +4,7 @@
 <% @boxes.each do |box| %>
   <%= link_to box_url(box) do %>
   <p><%= box.label %></p>
+  <a class="btn-floating btn-large red" data-confirm="Are you sure you want to delete <%= box.label %>?" data-method="delete" href="/box/<%= box.id %>" rel="nofollow"><i class="large material-icons">Delete</i>
   <table class="striped bordered">
   <tr>
     <th>Name</th>
@@ -34,3 +35,4 @@
 
 <%= link_to "New Box", boxes_new_path %>
 
+<!-- Total weight and value should show on the table and that variable should be transferred to boxes show page. -->
