--- a/app/views/boxes/_form.html.erb
+++ b/app/views/boxes/_form.html.erb
@@ -1,27 +1,27 @@
 <%= form_for @boxes do |box| %>
-  <div>
+   <div class="container #e0f7fa cyan lighten-5">
     <%= box.label :label, 'Name'%>
     <%= box.text_field :label%>
   </div>
-  <div>
+   <div class="container #b2ebf2 cyan lighten-4">
     <%= box.label :length, 'Length' %>
     <%= box.text_field :length %>
   </div>
-  <div>
+   <div class="container #80deea cyan lighten-3">
     <%= box.label :width, 'Width' %>
     <%= box.text_field :width %>
   </div>
-  <div>
+   <div class="container #4dd0e1 cyan lighten-2">
     <%= box.label :height, 'Height' %>
     <%= box.text_field :height %>
   </div>
-  <div>
-    <%= box.label :sealed, 'Sealed' %>
-    <%= box.check_box :sealed %>
+   <div class="container #26c6da cyan lighten-1">
+      <%= box.label :sealed, 'Sealed' %>
+      <%= box.text_field :sealed %>
   </div>
-  <div>
+   <div class="container #00bcd4 cyan">
     <%= box.label :arrived, 'Arrived' %>
-    <%= box.check_box :arrived %>
+    <%= box.text_field :arrived %>
   </div>
-  <%= box.submit "Submit" %>
+ <div class="center"><button class="#00b8d4 cyan accent-4"><%= box.submit "Submit" %></button></div>
 <% end %>
