--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -12,13 +12,16 @@
 <!-- lines 7 and 8 should show the total weight and value -->
 
 <h2> Box: <%= @boxes.label %></h2>
+<%= link_to "Edit Box", box_edit_path(:box_id => @boxes.id)%>
 <%= link_to "New Item", items_new_path(:box_id => @boxes.id), { :class => "button waves-effect waves-light btn" } %>
   <br><br>
   <div class="row">
     <% @items.each do |item| %>
-        <h1><%= @items.name %></h1>
-		<h4><%= @items.description %></h4>
-		<h4><%= @items.weight %>: lbs</h4>
-		<h4>$<%= @items.value %> Dollars</h4>
+        <h1><%= item.name %></h1>
+		<h4><%= item.description %></h4>
+		<h4><%= item.weight %>: lbs</h4>
+		<h4>$<%= item.value %> Dollars</h4>
     <% end %>
+    <h1>Total <%# item.total %></h1>
   </div>
+  
