changing colors for buttons

--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -37,7 +37,7 @@ It should show the dimensions, whether it arrived, and if it is sealed. -->
   </div> -->
 
    
-   <a class="btn-floating btn-large red" data-confirm="Are you sure you want to delete <%= box.label %>?" data-method="delete" href="/boxes/<%= box.id %>" rel="nofollow"><i class="large material-icons">Delete</i></a>
+   <a class="btn-floating btn-large #d50000 red accent-4" data-confirm="Are you sure you want to delete <%= box.label %>?" data-method="delete" href="/boxes/<%= box.id %>" rel="nofollow">Delete</a>
 <% end %>
 <%# link_to "Add an Item", items_new_path(:box_id => box.id) %>
  
