--- a/app/views/boxes/_form.html.erb
+++ b/app/views/boxes/_form.html.erb
@@ -25,3 +25,4 @@
   </div>
  <div class="center"><button class="#00b8d4 cyan accent-4"><%= box.submit "Submit" %></button></div>
 <% end %>
+<h4 class="center"><a href= "/">Home</a></h4>
