--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -19,4 +19,4 @@
   </div>
   <div class="center"><button class="#d4e157 lime lighten-1"><%= item.submit "Submit"%></button></div>
 <% end %>
-
+<h4 class="center"><a href= "/">Home</a></h4>
