--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -12,14 +12,14 @@ It should show the dimensions, whether it arrived, and if it is sealed. -->
 <!-- somehow put a link here to route back to the home page -->
 
 
-<h1>Welcome.. Ready to move</h1>
+<div class= "#bdbdbd grey lighten-1"><h1>Welcome...Ready to move?</h1></div>
 
-
+<div class= "#e0e0e0 grey lighten-2"><h4>Boxes</h4></div>
 <% @boxes.each do |box| %>
   <%= link_to box_url(box) do %>
-  <p><%= box.label %></p>
+ <h5><%= box.label %></h5>
 <% end %>
- <table> 
+ <table class="striped border"> 
   <th>Width: <%= box.width %></th>
   <th>Height: <%= box.height %></th>
   <th>Length: <%= box.height %></th>
@@ -28,12 +28,12 @@ It should show the dimensions, whether it arrived, and if it is sealed. -->
 </table>
   <!-- 
 <div class="row">
-    <% @items.each do |item| %>
+    <% @items.each #do |item| %>
         <h1><%# item.name %></h1>
     <h4><%# item.description %></h4>
     <h4><%# item.weight %>: lbs</h4>
     <h4>$<%# item.value %> Dollars</h4>
-    <% end %>
+    <% #end %>
   </div> -->
 
    
@@ -41,7 +41,7 @@ It should show the dimensions, whether it arrived, and if it is sealed. -->
 <% end %>
 <%# link_to "Add an Item", items_new_path(:box_id => box.id) %>
  
-<%= link_to "New Box", boxes_new_path %>
+<button class="btn-floating btn-large #d50000 red accent-4"><%= link_to "Box", boxes_new_path %></button> 
 
 
 
