--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -34,4 +34,4 @@
 <button class="btn-floating btn-large #d50000 red accent-4"><%= link_to "Item", items_new_path %></button>
 <% end %> 
 <button class="btn-floating btn-large #d50000 red accent-4"><%= link_to "Box", boxes_new_path %></button> 
-
+<h4 class="center"><a href= "/">Home</a></h4>
