--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,4 +5,4 @@
 <div class="container #18ffff cyan accent-2"><h4>Weight: <%= @items.weight %>: lbs</h4></div>
 <div class="container #00e5ff cyan accent-3"><h4>$ <%= @items.value %> Dollars</h4></div>
 <div class="center #00b8d4 cyan accent-4"><%= button_to 'edit', item_edit_path, method: :get %></div>
-
+<h4 class="center"><a href= "/">Home</a></h4>
