--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-  	<h4><a href= "/">Home</a></h4>
+  	<!-- <h4><a href= "/">Home</a></h4> -->
     <%= yield %>
   </body>
 </html>
