--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -30,13 +30,13 @@
         <td><%= item.weight %> lbs</td>
         <td>$<%= item.value %></td>
         <!-- We need an edit and delete button for the items that will work -->
-        <!-- <td><a class="btn-floating btn-large #d50000 red accent-4" data-method="edit" href="/items/<%= item.id %>" rel="nofollow">Edit</a>
+         <td><a class="btn-floating btn-large #d50000 red accent-4" data-method="get" href="/items/edit/<%= item.id %>" rel="nofollow">Edit</a>
            </a>
-        </td> -->
+        </td>
        <!-- We need an edit button for the items that will work -->
-       <!-- <td><a class="btn-floating btn-large #d50000 red accent-4" data-confirm="Are you sure you want to delete <%= item.name %>?" data-method="delete" href="/items/<%= item.id %>" rel="nofollow">Delete</a>
+       <td><a class="btn-floating btn-large #d50000 red accent-4" data-confirm="Are you sure you want to delete <%= item.name %>?" data-method="delete" href="/items/<%= item.id %>" rel="nofollow">Delete</a>
            </a>
-        </td> -->
+        </td>
     <% end %>
   </table>
     <h3>Totals </h3> 
